# waveEquationSolver

./: .gitignore  CMakeLists.txt  README.md
include/: function.hpp  incorrectSizeException.hpp  negativeValueException.hpp  outOfBoundException.hpp  weSolver.hpp
src/: function.cpp  main.cpp  weSolver.cpp
